--- a/noticies-catala.html
+++ b/noticies-catala.html
@@ -3,6 +3,16 @@
 <html lang="en" class="no-js">
     <!-- BEGIN HEAD -->
     <head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153412067-2"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-153412067-2');
+		</script>
+
         <meta charset="utf-8"/>
         <title>Techie - Notícies</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
