fix(serveis-catala): fixed <strong> tag

--- a/serveis-catala.html
+++ b/serveis-catala.html
@@ -330,13 +330,17 @@
 
                     <!--######################################################## -->
                     <div class="col-sm-6 sm-margin-b-50">
-                        </br></br></br>
+                        </br>
+                        </br>
+                        </br>
                         <div class="margin-b-20">
                             <img class="img-responsive" src="img/970x647/02.jpg" alt="Latest Products Image">
                         </div>
                         <h4 class="text-uppercase">AngelEye<span class="text-uppercase margin-l-20"></span></h4>
                         <p>Sistema professional de prevenció d'afogaments per càmeres que detecta automàticament les situacions de perill.</p>
-                        <strong><a href="docs/PiscinesCatala.pdf" target="_blank">PDF COMERCIAL</a><strong />
+                        <strong>
+                        <a href="docs/PiscinesCatala.pdf" target="_blank">PDF COMERCIAL</a>
+                        </strong>
                             <br>
                             <div class="work work-popup-trigger">
                                 <div class="work-overlay">
