fix(serveis-espanol): fixed <strong> tag

--- a/serveis-espanol.html
+++ b/serveis-espanol.html
@@ -327,13 +327,15 @@
 
                     <!--######################################################## -->
                     <div class="col-sm-6 sm-margin-b-50">
-                        </br></br></br>
+                        </br>
+                        </br>
+                        </br>
                         <div class="margin-b-20">
                             <img class="img-responsive" src="img/970x647/02.jpg" alt="Latest Products Image">
                         </div>
                         <h4 class="text-uppercase">AngelEye<span class="text-uppercase margin-l-20"></span></h4>
                         <p>Sistema professional por cámeras que detecta automaticamente las situacions de peligro.</p>
-                        <strong><a href="docs/Piscinas más seguras.pdf" target="_blank">PDF COMERCIAL</a><strong />
+                        <strong><a href="docs/Piscinas más seguras.pdf" target="_blank">PDF COMERCIAL</a></strong>
                             <br>
                             <div class="work work-popup-trigger">
                                 <div class="work-overlay">
@@ -344,7 +346,6 @@
                                         <a href="javascript:void(0);" class="work-popup-close">Cerrar</a>
                                         <div class="margin-b-30">
                                             <h3 class="margin-b-5">Cámaras AngelEye</h3>
-                                            <!--  <span>Tecnología ... ???</span> -->
                                         </div>
                                         <div class="row">
                                             <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
