fix(instalaciones-espanol): fixed link to english

--- a/instalaciones-espanol.html
+++ b/instalaciones-espanol.html
@@ -74,7 +74,7 @@
                             <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="noticies-espanol.html">Noticias</a></li>
                             <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="contact-espanol.html">Contacto</a></li>
                             <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="instalacions-catala.html">CATALÀ</a></li>
-                            <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="instalacions-english.html">ENGLISH 🇬🇧</a></li>
+                            <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="instalaciones-english.html">ENGLISH 🇬🇧</a></li>
                         </ul>
                     </div>
                 </div>
