style(index): removed dot from sentence

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="content-lg container">
             <div class="row margin-b-40">
                 <div class="col-sm-5">
-                    <h4 class="text-uppercase"></br>A TECHIE PRODUCTS & SYSTEMS TREBALLEM PER FER DE LA PISCINA I DEL MAR UN LLOC MÉS SEGUR.</br></h4>
+                    <h4 class="text-uppercase"></br>A TECHIE PRODUCTS & SYSTEMS TREBALLEM PER FER DE LA PISCINA I DEL MAR UN LLOC MÉS SEGUR</br></h4>
                     <div class="section-seperator"></div>
 
                     <h5></br></br>A Espanya es van registrar 539 ofegaments mortals el 2017. Aquests són la segona causa de mort infantil després dels accidents de trànsit.</br></br></h5>
