--- a/indexenglish.html
+++ b/indexenglish.html
@@ -157,24 +157,28 @@
 
     <!--========== FOOTER ==========-->
     <footer class="footer">
-
         <!-- Copyright -->
         <div class="bg-color-sky-light" data-auto-height="true">
-
-            <div class="content container">
-
-                <div class="row">
-                    <!--  <div class="col-sm-4"><p>&nbsp</p></div> -->
-                    <div class="col-sm-12">
-                        <h4></br></br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspTechie Products & Systems SL<span class="text-uppercase margin-l-20"></br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspCarr. a Sta. Afra 17151
-                                Sant Gregori, Girona</br></span></h4>
+            <div style="width:100%; text-align: center; margin-right: auto; margin-left: auto;">
+                    <div class="center">
+                        </br>
+                        </br>
+                        <h4>Techie Products & Systems SL</h4>
+                        <span class="text-uppercase margin-l-20">
+                            Carr. a Sta. Afra 17151 Sant Gregori, Girona
+                        </span>
+                        </br>
+                        </br>
                         <ul class="list-unstyled contact-list">
-                            <a href="tel:+34653667559"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<i
-                                    class="margin-r-10 color-base icon-call-out"> </i>+34 653 667 559 | +34 872 211 667</a> </br></br>
-                            <a href="mailto:techie@techieproducts.com">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<i
-                                    class="margin-r-10 color-base icon-envelope"></i>techie@techieproducts.com </br></br></a>
+                            <a href="tel:+34653667559">
+                            <i class="margin-r-10 color-base icon-call-out"> 
+                            </i>+34 653 667 559 | +34 872 211 667</a>
+                            </br>
+                            </br>
+                            <a href="mailto:techie@techieproducts.com">
+                            <i class="margin-r-10 color-base icon-envelope">
+                            </i>techie@techieproducts.com </br></br></a>
                     </div>
-                </div>
             </div>
         </div>
         </div>
