--- a/index.html
+++ b/index.html
@@ -100,10 +100,8 @@
                 <div class="container">
                     <div class="carousel-title">
                         <h2 class="color-white text-uppercase"><br /><br /><br /></br>Techie és una companyia creada per donar solució<br />a problemes de la societat amb tecnologies innovadores<br />
-                        </h2>
-                        <!--  <li class="js_nav-item nav-item-center"> FA apareixer un punt!!-->
+                        </h2>                        
                         <a href="#info" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">EXPLORAR</a>
-                        <!--</li> -->
                     </div>
                 </div>
             </div>
@@ -112,9 +110,16 @@
                 <div class="container">
                     <div class="carousel-title">
                         <div class="margin-b-5">
-                            </br> </br> </br>
+                            </br>
+                            </br>
+                            </br>
+                            </br>
+                            </br>
+                            </br>
+                            </br>
                             <h2 class="color-white text-uppercase">
-                                </br></br></br></br>SOM ESPECIALISTES EN SEGURETAT EN PISCINES I MÈDIS AQUÀTICS</h2>
+                                SOM ESPECIALISTES EN SEGURETAT EN PISCINES I MÈDIS AQUÀTICS
+                            </h2>
                         </div>
                         <a href="#info" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">EXPLORAR</a>
                     </div>
@@ -132,8 +137,9 @@
                 <div class="col-sm-5">
                     <h4 class="text-uppercase"></br>A TECHIE PRODUCTS & SYSTEMS TREBALLEM PER FER DE LA PISCINA I DEL MAR UN LLOC MÉS SEGUR</br></h4>
                     <div class="section-seperator"></div>
-
-                    <h5></br></br>A Espanya es van registrar 539 ofegaments mortals el 2017. Aquests són la segona causa de mort infantil després dels accidents de trànsit.</br></br></h5>
+                    </br>
+                    </br>
+                    <h5>A Espanya es van registrar 539 ofegaments mortals el 2017. Aquests són la segona causa de mort infantil després dels accidents de trànsit.</br></br></h5>
                     <h5 class="text-uppercase">JUNTS PODEM EVITAR-HO.</br></br>
                     </h5>
                     <a href="serveis-catala.html" class="btn-theme btn-theme-sm btn-white-bg text-uppercase">INFORMA'T</a>
@@ -152,7 +158,6 @@
     <!--========== END PAGE LAYOUT ==========-->
 
     <!--========== FOOTER ==========-->
-
     <footer class="footer">
         <!-- Copyright -->
         <div class="bg-color-sky-light" data-auto-height="true">
