style(about-pages): improved style and made equal

--- a/about-english.html
+++ b/about-english.html
@@ -89,20 +89,18 @@
     <!-- About -->
     <div class="section-seperator">
         <div id="about">
-            <!--   </br> </br> </br></br></br></br>
-                    <div class="col-sm-12 margin-l-20 text-uppercase color-subtitle">
-
-                        <h2>&nbsp&nbsp&nbsp&nbspNosaltres</h2>
-                        <strong>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspTechie Products &amp; Systems som una start-up amb tecnologies de seguretat.</br></br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspEns dediquem a la implementació de sistemes actius de prevenció d’ofegaments en piscines.</strong>
-                    </div> -->
-
             <div class="bg-color-white" data-auto-height="true">
                 <div class="content-lg container">
                     <div class="row margin-l-40">
                         <div class="col-sm-12">
                             <h2>About</h2>
-                            <p class="color-heading">Techie Products &amp; Systems is a start-up that works with security technologies.
-                                </br></br>We work on the implementation of security systems for swimming pools.</br></br></p>
+                            </br>
+                            </br>
+                            <p class="color-heading">Techie Products &amp; Systems is a start-up that works with security technologies.    
+                                We work on the implementation of security systems for swimming pools.
+                            </p>
+                            </br>
+                            </br>
                         </div>
                     </div>
                     <!-- Masonry Grid -->
@@ -110,7 +108,9 @@
                         <div class="masonry-grid-sizer col-xs-6 col-sm-6 col-md-1"></div>
                         <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4 sm-margin-b-30">
                             <div class="margin-b-60">
-                                </br> </br> </br>
+                                </br>
+                                </br>
+                                </br>
                                 <h2>MISSION</h2>
                                 <p>To bring technology closer to people.</p>
                             </div>
@@ -118,7 +118,8 @@
                         </div>
                         <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4">
                             <div class="margin-b-60">
-                                </br></br>
+                                </br>
+                                </br>
                                 <img class="full-width img-responsive wow fadeInUp" src="img/500x500/foto4.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".3s">
                             </div>
                             <h2>VISION</h2>
@@ -137,47 +138,62 @@
         </div>
     </div>
 
-    </div>
-
-
     <div class="section-seperator">
         <div id="colabs">
             <div class="content-lg container">
-
                 <div class="col-sm-4">
-                    <p>&nbsp</p>
                 </div>
-                <h3 class="text-uppercase">WE ARE PARTNERS WITH:</br></br></br></h3>
+                <h3 class="text-uppercase">WE ARE PARTNERS WITH:</h3>
+                </br>
+                </br>
+                </br>
                 <div class="row">
-                    <!-- Latest Products -->
                     <div class="col-sm-2">
-                        <p>&nbsp</p>
                     </div>
                     <div class="col-sm-4">
                         <div class="margin-b-20">
                             <a target="_blank" href="http://www.angeleye.it">
                                 <img class="img-responsive" src="img/clients/01.png" alt="AngelEye Colaborator"> </a>
                         </div>
-                        <p></br>Angeleye was stablished in 2006 in Bolzano, Italy.</br>Their product is manufactured in Germany and Italy.</p>
                     </div>
                     <div class="col-sm-4">
                         <div class="margin-b-10">
                             <a target="_blank" href="https://www.sentag.com">
                                 <img class="img-responsive" src="img/clients/02.jpg" alt="Sentag Colaborator"></a>
                         </div>
-                        <p></br>SENTAG was stablished in 2009 in Stockholm, Sweden.</br>Their product is manufactured in the UK.</p>
                     </div>
                     <div class="col-sm-2">
-                        <p>&nbsp</p>
+                    </div>
+                </div>
+                </br>
+                </br>
+                </br>
+                </br>
+                </br>
+                <div class="row">
+                    <!-- Latest Products -->
+                    <div class="col-sm-2">
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="margin-b-20">
+                            <a target="_blank" href="http://www.lifebuoyalarm.com">
+                                <img class="img-responsive" src="img/clients/04.jpg" alt="LifeBuoy Colaborator"> </a>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="margin-b-10">
+                            <a target="_blank" href="https://www.bluefox-swiss.com">
+                                <img class="img-responsive" src="img/clients/03.jpg" alt="Bluefox Colaborator"></a>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
                     </div>
                 </div>
                 <!-- End Swiper Clients -->
             </div>
         </div>
     </div>
-    </div>
     <!-- End Clients -->
-
 
     <!--========== FOOTER ==========-->
     <div class="bg-color-sky-light" data-auto-height="true">
@@ -196,13 +212,16 @@
                         </br>
                         <ul class="list-unstyled contact-list">
                             <a href="tel:+34653667559">
-                            <i class="margin-r-10 color-base icon-call-out"> 
-                            </i>+34 653 667 559 | +34 872 211 667</a>
+                            <i class="margin-r-10 color-base icon-call-out"></i>
+                            +34 653 667 559 | +34 872 211 667</a>
                             </br>
                             </br>
                             <a href="mailto:techie@techieproducts.com">
-                            <i class="margin-r-10 color-base icon-envelope">
-                            </i>techie@techieproducts.com </br></br></a>
+                            <i class="margin-r-10 color-base icon-envelope"></i>                                
+                            techie@techieproducts.com
+                            </a>
+                            </br>
+                            </br>
                     </div>
             </div>
         </div>
