--- a/about-catala.html
+++ b/about-catala.html
@@ -91,9 +91,10 @@
         <div id="about">
             <!--   </br> </br> </br></br></br></br>
                     <div class="col-sm-12 margin-l-20 text-uppercase color-subtitle">
-
-                        <h2>&nbsp&nbsp&nbsp&nbspNosaltres</h2>
-                        <strong>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspTechie Products &amp; Systems som una start-up amb tecnologies de seguretat.</br></br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspEns dediquem a la implementació de sistemes actius de prevenció d’ofegaments en piscines.</strong>
+                        <h2>Nosaltres</h2>
+                        <strong>Techie Products &amp; Systems som una start-up amb tecnologies de seguretat.
+                        </br>
+                        <Ens dediquem a la implementació de sistemes actius de prevenció d’ofegaments en piscines.</strong>
                     </div> -->
 
             <div class="bg-color-white" data-auto-height="true">
@@ -118,7 +119,8 @@
                         </div>
                         <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4">
                             <div class="margin-b-60">
-                                </br></br>
+                                </br>
+                                </br>
                                 <img class="full-width img-responsive wow fadeInUp" src="img/500x500/foto4.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".3s">
                             </div>
                             <h2>VISIÓ</h2>
@@ -144,73 +146,57 @@
     <div class="section-seperator">
         <div id="colabs">
             <div class="content-lg container">
-
                 <div class="col-sm-4">
-                    <p>&nbsp</p>
                 </div>
                 <h3 class="text-uppercase">Treballem amb el suport de:</br></br></br></h3>
                 <div class="row">
-
                     <div class="col-sm-2">
-                        <p>&nbsp</p>
                     </div>
                     <div class="col-sm-4">
                         <div class="margin-b-20">
                             <a target="_blank" href="http://www.angeleye.it">
                                 <img class="img-responsive" src="img/clients/01.png" alt="AngelEye Colaborator"> </a>
                         </div>
-                        <!--  <p></br>AngelEye va ser creat el 2006 a Bonzano. Itàlia. </p> <!--</br>El producte és fabricat a Alemania i Itàlia. -->
                     </div>
                     <div class="col-sm-4">
                         <div class="margin-b-10">
                             <a target="_blank" href="https://www.sentag.com">
                                 <img class="img-responsive" src="img/clients/02.jpg" alt="Sentag Colaborator"></a>
                         </div>
-                        <!-- <p></br>SENTAG fou fundada el 2009 a Estocolm, Suècia.</p> <!-- </br>El producte és fabricat al Regne Unit. -->
                     </div>
                     <div class="col-sm-2">
-                        <p>&nbsp</p>
                     </div>
-
-
-
                 </div>
-                </br></br></br></br></br>
+                </br>
+                </br>
+                </br>
+                </br>
+                </br>
                 <div class="row">
                     <!-- Latest Products -->
-                    <!-- Latest Products -->
                     <div class="col-sm-2">
-                        <p>&nbsp</p>
                     </div>
                     <div class="col-sm-4">
                         <div class="margin-b-20">
                             <a target="_blank" href="http://www.lifebuoyalarm.com">
                                 <img class="img-responsive" src="img/clients/04.jpg" alt="LifeBuoy Colaborator"> </a>
                         </div>
-                        <!--    <p></br>Lifebuoy va ser fundada el 2015 a Israel.</p> -->
-
                     </div>
                     <div class="col-sm-4">
                         <div class="margin-b-10">
                             <a target="_blank" href="https://www.bluefox-swiss.com">
                                 <img class="img-responsive" src="img/clients/03.jpg" alt="Bluefox Colaborator"></a>
                         </div>
-                        <!-- <p></br>Bluefox va ser fundada el 2008 a Suïssa.</p> -->
-
                     </div>
                     <div class="col-sm-2">
-                        <p>&nbsp</p>
                     </div>
-
                 </div>
-
                 <!-- End Swiper Clients -->
             </div>
         </div>
     </div>
     </div>
     <!-- End Clients -->
-
 
     <!--========== FOOTER ==========-->
     <div class="bg-color-sky-light" data-auto-height="true">
@@ -229,13 +215,16 @@
                         </br>
                         <ul class="list-unstyled contact-list">
                             <a href="tel:+34653667559">
-                            <i class="margin-r-10 color-base icon-call-out"> 
-                            </i>+34 653 667 559 | +34 872 211 667</a>
+                            <i class="margin-r-10 color-base icon-call-out"> </i>
+                            +34 653 667 559 | +34 872 211 667</a>
                             </br>
                             </br>
                             <a href="mailto:techie@techieproducts.com">
                             <i class="margin-r-10 color-base icon-envelope">
-                            </i>techie@techieproducts.com </br></br></a>
+                            </i>techie@techieproducts.com
+                            </a>
+                            </br>
+                            </br>
                     </div>
             </div>
         </div>
