fix(indexenglish): fix link to instalaciones-eng

--- a/indexenglish.html
+++ b/indexenglish.html
@@ -67,7 +67,7 @@
                         <ul class="nav navbar-nav navbar-nav-right">
                             <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#body">HOME</a></li>
                             <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="serveis-english.html">SERVICES</a></li>
-                            <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="instalacions-english.html">Instalations</a></li>
+                            <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="instalaciones-english.html">Instalations</a></li>
                             <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="about-english.html">About</a></li>
                             <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="noticies-english.html">News</a></li>
                             <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="contact-english.html">Contact</a></li>
