style(indexenglish.html):  style update

--- a/indexenglish.html
+++ b/indexenglish.html
@@ -99,11 +99,17 @@
                 <img class="img-responsive" src="img/fondo1.jpg" alt="Slider Image">
                 <div class="container">
                     <div class="carousel-title">
-                        <h2 class="color-white text-uppercase"><br /><br /><br /></br>TECHIE is a company created to provide solutions<br />to everyday problems of society with innovative
-                            technologies<br /></h2>
-                        <!--  <li class="js_nav-item nav-item-center"> FA apareixer un punt!!-->
+                        <br/>
+                        <br/>
+                        <br/>
+                        </br>
+                        <h2 class="color-white text-uppercase">
+                            TECHIE is a company created to provide solutions
+                            <br/>
+                            to everyday problems of society with innovative technologies
+                        </h2>
+                        <br/>
                         <a href="#info" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">EXPLORE</a>
-                        <!--</li> -->
                     </div>
                 </div>
             </div>
