refactor(indexenglish): refactor and rewording
Refactor and rewording to match the other languages format

--- a/indexenglish.html
+++ b/indexenglish.html
@@ -118,9 +118,16 @@
                 <div class="container">
                     <div class="carousel-title">
                         <div class="margin-b-5">
-                            </br> </br> </br>
+                            </br>
+                            </br>
+                            </br>
+                            </br>
+                            </br>
+                            </br>
+                            </br>
                             <h2 class="color-white text-uppercase">
-                                </br></br></br></br>We select innovative products</br>to find preventive solutions for individuals and companies</h2>
+                                WE ARE SPECIALISTS IN POOL AND AQUATIC ENVIRONMENTS SAFETY
+                            </h2>
                         </div>
                         <a href="#info" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">EXPLORE</a>
                     </div>
@@ -136,15 +143,25 @@
         <div class="content-lg container">
             <div class="row margin-b-40">
                 <div class="col-sm-5">
-                    <h5 class="text-uppercase"></br>TECHIE PRODUCTS & SYSTEMS works for the implementation of anti-drowning systems for swimming pools.
-                        </br></br>These systems are used all around the world.<h5>
-                            <img src="img/Banderes1.png" alt="Banderas" height="110" width="330" href="serveis-catala.html"> </br>
-                            <div class="section-seperator"></div>
-
-                            <p></br>In Spain, there have been 80 incidents in swimming pools so far this year. The death toll is almost half of it. Drownings are usually silent and fast, and leave
-                                many survivors with long term damages.</br></p>
-                            <h5 class="text-uppercase">However, those tragedies could be avoided.</br></h5>
-                            <a href="serveis-english.html" class="btn-theme btn-theme-sm btn-white-bg text-uppercase">FIND OUT MORE</a>
+                    <h4 class="text-uppercase">
+                        </br>
+                        AT TECHIE PRODUCTS & SYSTEMS WE WORK FOR MAKING BOTH THE SEA AND MAKING SWIMMING POOLS SAFER PLACES
+                        </br>
+                    </h4>
+                    <div class="section-seperator"></div>
+                    </br>
+                    </br>
+                    <h5>
+                        Spain registered 539 fatal drownings in 2017. These are the second leading cause of child mortality after traffic accidents.
+                        </br>
+                        </br>
+                    </h5>
+                    <h5 class="text-uppercase">
+                        TOGETHER WE CAN FIGHT THIS.
+                        </br>
+                        </br>
+                    </h5>
+                    <a href="serveis-english.html" class="btn-theme btn-theme-sm btn-white-bg text-uppercase">MORE INFO</a>
                 </div>
 
                 <div class="col-sm-7">
@@ -156,6 +173,7 @@
         <div class="section-seperator"></div>
     </div>
     </div>
+
     <!--========== END PAGE LAYOUT ==========-->
 
     <!--========== FOOTER ==========-->
