refactor(indexenglish): minor typo fixes

--- a/indexenglish.html
+++ b/indexenglish.html
@@ -126,7 +126,7 @@
                             </br>
                             </br>
                             <h2 class="color-white text-uppercase">
-                                WE ARE SPECIALISTS IN POOL AND AQUATIC ENVIRONMENTS SAFETY
+                                WE ARE SPECIALISTS IN POOLS AND AQUATIC ENVIRONMENTS SAFETY
                             </h2>
                         </div>
                         <a href="#info" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">EXPLORE</a>
@@ -145,7 +145,7 @@
                 <div class="col-sm-5">
                     <h4 class="text-uppercase">
                         </br>
-                        AT TECHIE PRODUCTS & SYSTEMS WE WORK FOR MAKING BOTH THE SEA AND MAKING SWIMMING POOLS SAFER PLACES
+                        AT TECHIE PRODUCTS & SYSTEMS WE WORK FOR MAKING BOTH THE SEA AND SWIMMING POOLS SAFER PLACES
                         </br>
                     </h4>
                     <div class="section-seperator"></div>
