--- a/instalacions-catala.html
+++ b/instalacions-catala.html
@@ -74,7 +74,7 @@
                             <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="noticies-catala.html">Notícies</a></li>
                             <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="contact-catala.html">Contacte</a></li>
                             <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="instalaciones-espanol.html">ESPAÑOL 🇪🇸 </a></li>
-                            <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="instalacions-english.html">ENGLISH 🇬🇧</a></li>
+                            <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="instalaciones-english.html">ENGLISH 🇬🇧</a></li>
                         </ul>
                     </div>
                 </div>
