style: text in one line to match other pages

--- a/about-catala.html
+++ b/about-catala.html
@@ -102,8 +102,12 @@
                     <div class="row margin-l-40">
                         <div class="col-sm-12">
                             <h2>Nosaltres</h2>
-                            <p class="color-heading">Techie Products &amp; Systems som una start-up amb tecnologies de seguretat.</br></br>Som experts en seguretat en piscines i medis
-                                aquàtics</br></br></p>
+                            <p class="color-heading">
+                                Techie Products &amp; Systems som una start-up amb tecnologies de seguretat. Som experts en seguretat en piscines i medis
+                                aquàtics
+                            </p>
+                            </br>
+                            </br>
                         </div>
                     </div>
                     <!-- Masonry Grid -->
@@ -111,7 +115,9 @@
                         <div class="masonry-grid-sizer col-xs-6 col-sm-6 col-md-1"></div>
                         <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4 sm-margin-b-30">
                             <div class="margin-b-60">
-                                </br> </br> </br>
+                                </br>
+                                </br>
+                                </br>
                                 <h2>MISSIÓ</h2>
                                 <p>Acostar la tecnología a les persones.</p>
                             </div>
